--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -8,7 +8,9 @@
 }
 
 .home-left {
-    flex: 1;
+    flex: 2;
+    min-width: 0;
+    overflow: hidden;
     display: flex;
     justify-content: center;
     align-items: flex-start;
@@ -49,5 +51,7 @@
     .home-left {
         padding-right: 0;
         margin-bottom: var(--spacing-lg);
+        width: 100%;
+        min-height: 200px;
     }
 }
